--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/fuchidahiro/twittertest/issues"
   },
-  "homepage": "https://github.com/fuchidahiro/twittertest#readme"
+  "homepage": "https://github.com/fuchidahiro/twittertest#readme",
+  "dependencies": {
+    "ntwitter": "^0.5.0"
+  }
 }
