--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/fuchidahiro/twittertest#readme",
   "dependencies": {
     "ntwitter": "^0.5.0"
+  },
+  "devDependencies": {
+    "electron": "1.8.4"
   }
 }
